[package]
name = "eli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Ratatui (TUI)
ratatui = "0.29.0"
# Crossterm for terminal event/IO handling
crossterm = "0.28"

# Async runtime (Toko)
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# HTTP client for JSON-RPC requests
reqwest = { version = "0.11", features = ["json"] }

# JSON serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For general error handling
anyhow = "1.0"

[dev-dependencies]
mockito = "0.31.0"
tokio    = { version = "1.0", features = ["rt-multi-thread", "macros"] }
